# AlignDiT

./: LICENSE  README.md  pyproject.toml  ruff.toml
ckpts/AlignDiT_finetune_hifigan_16k_LRS3_char/: url.txt
ckpts/AlignDiT_pretrain_hifigan_16k_LibriSpeech_notext/: url.txt
ckpts/av_hubert/lrs3_vox/clean-pretrain/: url.txt
ckpts/hifigan_16k_LRS3/: config.json
data/: lrs3_test_cross_sentence.lst
data/LRS3_char/: duration.json  raw.arrow  vocab.txt
data/LRS3_debug/: url.txt
data/LibriSpeech_debug/: url.txt
data/LibriSpeech_notext/: duration.json  raw.arrow
src/aligndit/config/: finetune.yaml  pretrain.yaml
src/aligndit/model/: __init__.py  cfm_notext.py  cfm_vt.py  dataset.py  hifigan_16k.py  modules.py  trainer_notext.py  trainer_vt.py
src/aligndit/model/backbone/: dit_notext.py  dit_vt_a.py  dit_vt_b.py  dit_vt_c.py
src/aligndit/run/eval/: eval_lrs3_test.sh  infer.sh  infer_tts.sh  infer_vts.sh  infer_w_lipreader.sh
src/aligndit/run/misc/: extract_avhubert_from_only_video.sh  extract_hubert.sh  extract_mel.sh  prepare_librispeech_notext.sh
src/aligndit/run/train/: finetune.sh  pretrain.sh
src/aligndit/script/eval/: eval_lrs3_test.py  infer.py  utils.py
src/aligndit/script/misc/: extract_avhubert_from_only_video.py  extract_hubert.py  extract_mel.py  prepare_librispeech_notext.py  prepare_lrs3.py
src/aligndit/script/train/: finetune.py  pretrain.py
src/gslm/unit2speech/tacotron2/: audio_processing.py  layers.py
